# giveawaybot-1905

./: .gitignore  .google_service_key.json  Dockerfile  README.md  babel.cfg  docker-compose.yml  pyproject.toml  requirements.txt
bot/: __main__.py  bot_controller.py
bot/cache/: base.py  key_builder.py  redis.py  serialization.py
bot/core/: config.py  loader.py
bot/database/models/: user.py
bot/filters/: admin.py
bot/handlers/: __init__.py  captcha.py  error.py  language.py  menu.py  referrals.py  start.py  subscription.py
bot/keyboards/: default_commands.py
bot/middlewares/: __init__.py  ask_language.py  auth.py  i18n.py  throttling.py
bot/services/: gsheets.py  users.py
bot/services/core/: __init__.py  config.py  gsheets.py
bot/translations/en/LC_MESSAGES/: messages.po
bot/translations/ru/LC_MESSAGES/: messages.po
bot/utils/: command.py
migrations/versions/: 2024-05-19_initial.py  2024-05-20_user_twitter_username.py  2024-06-06_user_verified_at.py  2024-06-07_user_youtube_screenshot.py  2024-06-09_user_is_participant.py
scripts/: down.sh  up.sh
