[tool.poetry]
name = "giveaway-bot-1905"
version = "0.1.0"
description = ""
authors = ["zrxmax <“zrxmax@icloud.com”>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.6.0"
uvloop = "^0.19.0"
sentry-sdk = "^2.2.0"
pydantic-settings = "^2.2.1"
SQLAlchemy = "^2.0.30"
redis = "^5.0.4"
orjson = "^3.10.3"
pydantic = "^2.7.1"
loguru = "^0.7.2"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
cachetools = "^5.3.3"
greenlet = "^3.0.3"
captcha = "^0.5.0"
gspread-asyncio = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
